# houston-hackathon

./: .gitignore  .pre-commit-config.yaml  HACKATHON_BRIEF.md  HCU_BRANDBOOK.md  JUDGING.md  README.md  README.md.tmpl  pyproject.toml  🎂 Smart Bakery Order OS — Omnichannel AI Agent Sys.md
.claude/: settings.local.json
.well-known/: agent.json
analysis/: _world_score.json
apps/gateway/: main.py
apps/gateway/routes/: health.py  instagram.py
apps/owner_bot/: handlers.py  main.py
apps/web/routes/: admin.py
apps/web/static/: brand.css
apps/web/templates/: _base.html  cake_detail.html  landing.html  order_status.html  policy_delivery.html
data/: catalog.yaml  mcp_catalog.json  mcp_kitchen_capacity.json  mcp_kitchen_constraints.json  mcp_pos_summary.json  mcp_recent_sales.csv  mcp_sales_history.json  messages.csv  policies.yaml
duman/: .env.example  .gitignore  ARCHITECTURE.md  JUDGING.md  Makefile  README.md  README.md.tmpl
duman/.well-known/: agent.json
duman/analysis/: _metrics.json  hypothesis.ipynb
duman/apps/gateway/: security.py
duman/apps/owner_bot/: cards.py  handlers.py  outbound.py
duman/data/: catalog.yaml  kitchen_calendar.yaml  mcp_budget.json  mcp_margins.json  sales.csv
duman/scripts/: check_brand.py  fetch_mcp_data.py  generate_sales_csv.py  render_readme.py  tunnel.sh
maralbek/: README.md
ops/: mcp_tools.md
ops/prompts/: brand_critic.md  care.md  custom.md  marketing.md  reporting.md
scripts/: demo.sh  drive_scenario.py  run.sh  run_world.py
src/happycake/: __init__.py  storage.py
tests/scenarios/: runner.py
(+99 files in other folders)
